<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.relism</groupId>
    <artifactId>jdae-parent</artifactId>
    <version>1.2.0</version>
    <packaging>pom</packaging>

    <name>JDAE - Java Dynamic Annotation Expander</name>
    <description>Build-time annotation expansion framework for Java</description>

    <modules>
        <module>jdae-api</module>
        <module>jdae-core</module>
        <module>jdae-maven-plugin</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>

        <asm.version>9.7.1</asm.version>
        <maven.version>3.9.6</maven.version>
        <maven.plugin.annotations.version>3.10.2</maven.plugin.annotations.version>
        <junit.version>5.11.0</junit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>dev.relism</groupId>
                <artifactId>jdae-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.relism</groupId>
                <artifactId>jdae-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- asm-tree carries the annotation trees this rewrites; asm comes with it. -->
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm-tree</artifactId>
                <version>${asm.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-plugin-api</artifactId>
                <version>${maven.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-core</artifactId>
                <version>${maven.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugin-tools</groupId>
                <artifactId>maven-plugin-annotations</artifactId>
                <version>${maven.plugin.annotations.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <version>3.13.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
